# ferris-bot

./: Cargo.toml  Dockerfile  README.md  ferris-bot.nomad
.github/workflows/: build-docker.yml
questions/: q1.rs  q2.rs  q3.rs  q4.rs  q5.rs  q6.rs  q7.rs
src/: animal.rs  configuration.rs  handler.rs  main.rs  question.rs  sound.rs
src/commands/: mod.rs  quiz.rs  run.rs
src/model/: configurable.rs  container.rs  mod.rs  question.rs  runnable.rs
